[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/AxisConf.gd" type="Script" id=1]

[node name="AxisConf" type="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 19.0
rect_min_size = Vector2( 55, 0 )
rect_pivot_offset = Vector2( -124.722, -56.5 )
text = "axis n:"
align = 2
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 59.0
margin_right = 259.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="AxisBox" type="OptionButton" parent="."]
margin_left = 263.0
margin_right = 343.0
margin_bottom = 24.0
text = "Axis 9"

[node name="MinButton" type="Button" parent="."]
margin_left = 347.0
margin_right = 403.0
margin_bottom = 24.0
text = "setMin"

[node name="MaxButton" type="Button" parent="."]
margin_left = 407.0
margin_right = 465.0
margin_bottom = 24.0
text = "setMax"

[node name="ResetButton" type="Button" parent="."]
margin_left = 469.0
margin_right = 514.0
margin_bottom = 24.0
text = "reset"

[connection signal="item_selected" from="AxisBox" to="." method="_on_AxisBox_item_selected"]
[connection signal="pressed" from="MinButton" to="." method="_on_MinButton_pressed"]
[connection signal="pressed" from="MaxButton" to="." method="_on_MaxButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
